@@ -59,11 +59,9 @@ public:
     void clear();
     void swap(dictionary&);
 
-    int  read(const char*);
-    int  write(const char*) const;
-
-    int  fromASCII(std::istream &);
-    void toASCII(std::ostream &) const;
+    int  read(const char* name);
+    int  write(const char* name) const;
+    void print(std::ostream &) const;
 
     void sort(array_t<uint32_t>&);
     int  merge(const dictionary&);
